[gd_scene load_steps=4 format=3 uid="uid://cf74vsvp8cl6v"]

[ext_resource type="Script" path="res://bullet.gd" id="1_5jcq5"]
[ext_resource type="Texture2D" uid="uid://bxwkhyi4gmgdo" path="res://art/placeholders/bullet_trace.png" id="2_es668"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c7fmm"]
radius = 2.0
height = 20.0

[node name="Area2D" type="Area2D"]
script = ExtResource("1_5jcq5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_es668")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(68, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_c7fmm")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(3, -6.01853e-36)
scale = Vector2(2.2, 0.2)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
